checkpolicy/tests/negative/bad_require.te
module bad_require 1.0;

require {
	garbage_token foo_t;
}
